--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
@@ -19,7 +19,9 @@
     <Columns>
         <RadzenDataGridColumn Property="@nameof(ReceiptDetail.Id)" Title="@Localizer["Id"]" Visible="false" />
         <RadzenDataGridColumn Property="@nameof(ReceiptDetail.Store)" Title="@Localizer["Store"]">
-            
+            <FilterTemplate>
+                <RadzenDropDown @bind-Value="@_selectedStores" Data="@_stores" AllowVirtualization="true" AllowFiltering="true" AllowClear="true" Multiple="true" Change="@Reload"/>
+            </FilterTemplate>
         </RadzenDataGridColumn>
         <RadzenDataGridColumn
             Property="@nameof(ReceiptDetail.PurchaseDate)"
@@ -50,16 +52,25 @@
     private IEnumerable<ReceiptDetail> _receiptDetails = null!;
 
     // Filters
+    private IEnumerable<string> _stores = [];
+    private IEnumerable<string>? _selectedStores;
     private DateOnly? _purchaseDateFrom = DateOnly.FromDateTime(DateTime.Today.AddDays(-DateTime.Today.Day + 1).AddMonths(-1));
     private DateOnly? _purchaseDateTo;
     private decimal? _totalCostFrom;
     private decimal? _totalCostTo;
+
+    protected override async Task OnInitializedAsync()
+    {
+        _stores = await GetStores();
+        await base.OnInitializedAsync();
+    }
 
     private async Task Reload() => await _grid.FirstPage(forceReload: true);
     
     private async Task LoadData(LoadDataArgs args)
     {
         (_receiptDetails, _count) = await GetData(
+            _selectedStores,
             _purchaseDateFrom,
             _purchaseDateTo,
             _totalCostFrom,
@@ -69,7 +80,14 @@
             args.Top.GetValueOrDefault(10));
     }
 
+    private static async Task<IEnumerable<string>> GetStores()
+    {
+        await Task.Yield();
+        return Enumerable.Range(1, 10000).Select(x => "Store " + x);
+    }
+
     private async Task<ReceiptDetailsResponse> GetData(
+        IEnumerable<string>? stores,
         DateOnly? purchaseDateMin,
         DateOnly? purchaseDateMax,
         decimal? totalCostMin,
@@ -89,10 +107,11 @@
             })
             .AsQueryable()
             .Where(r 
-                => r.PurchaseDate >= purchaseDateMin.GetValueOrDefault(DateOnly.MinValue)
-                && r.PurchaseDate <= purchaseDateMax.GetValueOrDefault(DateOnly.MaxValue)
-                && r.TotalCost >= totalCostMin.GetValueOrDefault(decimal.MinValue)
-                && r.TotalCost <= totalCostMax.GetValueOrDefault(decimal.MaxValue));
+                => (stores == null || stores.Contains(r.Store))
+                   && r.PurchaseDate >= purchaseDateMin.GetValueOrDefault(DateOnly.MinValue)
+                   && r.PurchaseDate <= purchaseDateMax.GetValueOrDefault(DateOnly.MaxValue)
+                   && r.TotalCost >= totalCostMin.GetValueOrDefault(decimal.MinValue)
+                   && r.TotalCost <= totalCostMax.GetValueOrDefault(decimal.MaxValue));
 
         var receiptsCount = query.Count();
         if (!string.IsNullOrWhiteSpace(orderBy))
