Set compact density and page size for receipts table

--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
@@ -10,6 +10,8 @@
     Data="@_receiptDetails"
     Count="@_count"
     LoadData="@LoadData"
+    Density="Density.Compact"
+    PageSize="25"
     AllowPaging="true"
     AllowFiltering="true"
     FilterMode="FilterMode.Simple"
