--- a/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Pages/Receipts.razor
@@ -1,6 +1,8 @@
 @page "/"
 @using ExpenseExplorer.WebApp.Models
+@using ExpenseExplorer.WebApp.Services
 @inject IStringLocalizer<Receipts> Localizer
+@inject ReceiptService ReceiptService
 
 <PageTitle>@Localizer["_Receipts"]</PageTitle>
 
@@ -82,56 +84,20 @@
     
     private async Task LoadData(LoadDataArgs args)
     {
-        (_receiptDetails, _count) = await GetData(
+        (_receiptDetails, _count) = await ReceiptService.GetReceiptsAsync(
+            args.Top.GetValueOrDefault(10),
+            args.Skip.GetValueOrDefault(),
+            args.OrderBy,
             _selectedStores ?? [],
             _purchaseDateFrom,
             _purchaseDateTo,
             _totalCostFrom,
-            _totalCostTo,
-            args.OrderBy,
-            args.Skip.GetValueOrDefault(),
-            args.Top.GetValueOrDefault(10));
+            _totalCostTo);
     }
 
     private static async Task<IEnumerable<string>> GetStores()
     {
         await Task.Yield();
         return Enumerable.Range(1, 10000).Select(x => "Store " + x);
-    }
-
-    private async Task<ReceiptDetailsResponse> GetData(
-        IEnumerable<string> stores,
-        DateOnly? purchaseDateMin,
-        DateOnly? purchaseDateMax,
-        decimal? totalCostMin,
-        decimal? totalCostMax,
-        string? orderBy,
-        int skip,
-        int take)
-    {
-        await Task.Yield();
-        var query = Enumerable.Range(1, 10000)
-            .Select(x => new ReceiptDetails(
-                x,
-                "Store " + x,
-                DateOnly.FromDateTime(DateTime.Today.AddDays(-x)),
-                x * 10m)
-            )
-            .AsQueryable()
-            .Where(r 
-                => (!stores.Any() || stores.Contains(r.Store))
-                   && r.PurchaseDate >= purchaseDateMin.GetValueOrDefault(DateOnly.MinValue)
-                   && r.PurchaseDate <= purchaseDateMax.GetValueOrDefault(DateOnly.MaxValue)
-                   && r.TotalCost >= totalCostMin.GetValueOrDefault(decimal.MinValue)
-                   && r.TotalCost <= totalCostMax.GetValueOrDefault(decimal.MaxValue));
-
-        var receiptsCount = query.Count();
-        if (!string.IsNullOrWhiteSpace(orderBy))
-        {
-            query = query.OrderBy(orderBy);
-        }
-
-        var data = query.Skip(skip).Take(take).ToList();
-        return new ReceiptDetailsResponse(data, receiptsCount);
     }
 }
