Add padding to RadzenBody in MainLayout

--- a/src/ExpenseExplorer.WebApp/Components/Layout/MainLayout.razor
+++ b/src/ExpenseExplorer.WebApp/Components/Layout/MainLayout.razor
@@ -13,7 +13,7 @@
     <RadzenSidebar @bind-Expanded="@_navMenuExpanded">
         <NavMenu/>
     </RadzenSidebar>
-    <RadzenBody>
+    <RadzenBody Style="padding: 5px;">
         @Body
     </RadzenBody>
 </RadzenLayout>
